# libcxlmi

./: .gitignore  meson.build
docs/: Vendor-Specific-Commands.md  mbcci-sfx-memdev-plan.md  sfx_features.md  vu_handler_def.h
src/cxlmi/: api-types.h  commands.c
tests/: mbcci-sfx-read-tests.sh
tests/scripts/: test_mctp_cci_cel_commands.sh  test_mctp_cci_traverse.sh
tools/: meson.build
tools/mbcci-sfx/: cmd_cel.c  cmd_events.c  cmd_features.c  cmd_fm.c  cmd_fw.c  cmd_health.c  cmd_identify.c  cmd_logs.c  cmd_partition.c  cmd_qos.c  cmd_sdb_tunnel.c  cmd_timestamp.c  cmd_vu_evtadd.c  main.c  mbcci-sfx.h  meson.build
tools/mctp-cci/: README.en.md  README.md  cmd_cel.c  cmd_dcd.c  cmd_dcd_mgmt.c  cmd_events.c  cmd_features.c  cmd_fw.c  cmd_health.c  cmd_identify.c  cmd_info.c  cmd_logs.c  cmd_mld.c  cmd_partition.c  cmd_pmem.c  cmd_poison.c  cmd_qos.c  cmd_sanitize.c  cmd_security.c  cmd_switch.c  cmd_timestamp.c  cmd_vendor.c  main.c  mctp-cci.h  meson.build  util.c
