# SPDX-License-Identifier: LGPL-2.1-or-later
#
# This file is part of libcxlmi.
#
executable(
    'mbcci-sfx',
    [
        'main.c',
        'cmd_identify.c',
        'cmd_events.c',
        'cmd_vu_evtadd.c',
        'cmd_logs.c',
    ],
    dependencies: libcxlmi_dep,
    include_directories: [inc]
)
