# SPDX-License-Identifier: LGPL-2.1-or-later
#
# This file is part of libcxlmi.
#
executable(
    'mbcci-sfx',
    [
        'main.c',
        'cmd_identify.c',
        'cmd_partition.c',
        'cmd_fw.c',
        'cmd_health.c',
        'cmd_qos.c',
        'cmd_fm.c',
        'cmd_events.c',
        'cmd_vu_evtadd.c',
        'cmd_logs.c',
        'cmd_cel.c',
        'cmd_timestamp.c',
        'cmd_sdb_tunnel.c',
    ],
    dependencies: libcxlmi_dep,
    include_directories: [inc]
)
